k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chime
  labels:
    app: chime
spec:
  replicas: 15
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: chime
  template:
    metadata:
      labels:
        app: chime
    spec:
      containers:
      - image: docker.pkg.github.com/codeforphilly/chime/penn-chime:latest
        name: chime
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        volumeMounts:
          - name: google-api-creds
            mountPath: "/mnt/google-api-creds"
            readOnly: true
      volumes:
        - name: google-api-creds
          secret:
            secretName: google-api-creds-json
        
          
      imagePullSecrets:
      - name: regcred
