k8s/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chime
  labels:
    app: chime
spec:
  selector:
    app: chime
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
